add bets and prizes new logic
