# pdrest/docs/openapi.yaml
@@ -863,6 +863,45 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
 
+  /user/claim_bet:
+    post:
+      summary: Claim bet result
+      tags:
+        - User
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: id
+          in: query
+          required: false
+          schema:
+            type: integer
+      requestBody:
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: integer
+      responses:
+        '200':
+          description: Bet claimed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+
   /user/unfinished_bets/{uuid}:
     get:
       summary: Get unfinished bets for user
